--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="icon" type="image/png" href="favicon.png">
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>TrackIT - Expense Tracker (Firebase)</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
@@ -162,7 +163,58 @@
       #user-info, #logout-btn { display: none !important; }
       .sidebar-user { display: flex; flex-direction: column; }
     }
-  </style>
+  
+/* iOS Style Floating Rounded Bottom Nav */
+.bottom-nav-ios {
+  position: fixed;
+  bottom: 16px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 92%;
+  max-width: 420px;
+  height: 60px;
+  background: white;
+  border-radius: 30px;
+  box-shadow: 0 8px 25px rgba(0,0,0,0.12);
+  display: none;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 500;
+}
+
+.bottom-nav-btn {
+  flex: 1;
+  border: none;
+  background: none;
+  text-align: center;
+  font-size: 18px;
+  padding: 6px 0;
+  color: #888;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2px;
+  cursor: pointer;
+  transition: color 0.25s;
+}
+
+.bottom-nav-btn span {
+  font-size: 11px;
+  font-weight: 500;
+}
+
+.bottom-nav-btn.active {
+  color: #ff6b35;
+  font-weight: 600;
+}
+
+/* Only show on mobile */
+@media (max-width: 700px) {
+  .bottom-nav-ios { display: flex; }
+  .container { padding-bottom: 100px; }
+}
+
+</style>
 </head>
 <body>
   <!-- Sidebar overlay -->
@@ -1158,6 +1210,11 @@
 
     // ---------- Navigation ----------
     function switchPage(page) {
+// Highlight bottom navigation
+document.querySelectorAll('.bottom-nav-btn').forEach(btn => {
+  btn.classList.toggle('active', btn.dataset.page === page);
+});
+
       document.querySelectorAll('.nav-item').forEach(item => item.classList.remove('active'));
       const navItems = document.querySelectorAll('.nav-item');
       const pages = ['home','history','analytics','recurring','budget','settings'];
@@ -1318,5 +1375,22 @@ async function resetData() {
 
 
   </script>
+
+<!-- Bottom Navigation (Mobile Only) -->
+<nav class="bottom-nav-ios">
+  <button onclick="switchPage('home')" class="bottom-nav-btn" data-page="home">
+    🏠
+    <span>Home</span>
+  </button>
+  <button onclick="switchPage('history')" class="bottom-nav-btn" data-page="history">
+    📋
+    <span>Transactions</span>
+  </button>
+  <button onclick="switchPage('analytics')" class="bottom-nav-btn" data-page="analytics">
+    📊
+    <span>Analytics</span>
+  </button>
+</nav>
+
 </body>
 </html>
