--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
   <title>TrackIT - Expense Tracker (Firebase)</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
@@ -218,18 +218,23 @@ body.logged-in .add-btn-floating { display: flex; }
 .container { padding-bottom: 95px !important; }
 
 
-/* Final Clean Bottom Navigation */
+
+
+
+/* Final Safe-Area Aware Bottom Navigation */
 .bottom-nav {
   position: fixed;
-  bottom: 0;
+  bottom: env(safe-area-inset-bottom);
   left: 0;
   right: 0;
-  height: 60px;
+  height: calc(60px + env(safe-area-inset-bottom));
+  padding-bottom: env(safe-area-inset-bottom);
   background: #ffffff;
   border-top: 1px solid #ddd;
   display: none;
   align-items: center;
-  padding: 0 12px;
+  padding-left: 14px;
+  padding-right: 14px;
   z-index: 999;
 }
 .nav-btn {
@@ -257,10 +262,10 @@ body.logged-in .add-btn-floating { display: flex; }
   box-shadow: 0 4px 10px rgba(255,107,53,0.35);
   cursor: pointer;
 }
-/* Only show after login */
+/* Show only after login */
 body.logged-in .bottom-nav { display: flex; }
-/* Prevent content overlap */
-.container { padding-bottom: 100px !important; }
+/* Prevent overlap */
+.container { padding-bottom: calc(120px + env(safe-area-inset-bottom)) !important; }
 
 </style>
 </head>
@@ -636,6 +641,8 @@ body.logged-in .bottom-nav { display: flex; }
     // ---------- Auth Flow ----------
     // Show auth page until user signed in
     onAuthStateChanged(auth, async (user) => {
+  if(user){ document.body.classList.add('logged-in'); } 
+  else { document.body.classList.remove('logged-in'); }
   if(user){ document.body.classList.add('logged-in'); } 
   else { document.body.classList.remove('logged-in'); }
   if(user){ document.body.classList.add('logged-in'); } 
@@ -1262,6 +1269,9 @@ body.logged-in .bottom-nav { display: flex; }
 
     // ---------- Navigation ----------
     function switchPage(page) {
+  document.querySelectorAll('.nav-btn').forEach(btn => {
+    btn.classList.toggle('active', btn.dataset.page === page);
+  });
   document.querySelectorAll('.nav-btn').forEach(btn => {
     btn.classList.toggle('active', btn.dataset.page === page);
   });
