--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TrackIT - Expense Tracker (Firebase)</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
@@ -162,122 +162,7 @@
       #user-info, #logout-btn { display: none !important; }
       .sidebar-user { display: flex; flex-direction: column; }
     }
-  
-
-@media (max-width: 700px) {
-  .bottom-nav-ios { display: flex; }
-  .container { padding-bottom: 100px !important; }
-}
-
-
-/* Simple Bottom Navigation */
-.bottom-nav {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 58px;
-  background: #ffffff;
-  border-top: 1px solid #ddd;
-  display: none;
-  justify-content: space-around;
-  align-items: center;
-  z-index: 999;
-}
-.bottom-nav button {
-  background: none;
-  border: none;
-  font-size: 24px;
-  color: #666;
-  cursor: pointer;
-}
-.bottom-nav button.active { color: #ff6b35; }
-
-/* Floating Add Button */
-.add-btn-floating {
-  position: fixed;
-  bottom: 78px;
-  right: 22px;
-  width: 58px;
-  height: 58px;
-  background: #ff6b35;
-  color: white;
-  border-radius: 50%;
-  font-size: 32px;
-  border: none;
-  cursor: pointer;
-  display: none;
-  z-index: 1000;
-}
-
-/* Show nav only after login */
-body.logged-in .bottom-nav,
-body.logged-in .add-btn-floating { display: flex; }
-
-/* Ensure content not hidden */
-.container { padding-bottom: 95px !important; }
-
-
-
-
-
-/* Final Safe-Area Aware Bottom Navigation */
-.bottom-nav {
-  position: fixed;
-  bottom: env(safe-area-inset-bottom);
-  left: 0;
-  right: 0;
-  height: calc(60px + env(safe-area-inset-bottom));
-  padding-bottom: env(safe-area-inset-bottom);
-  background: #ffffff;
-  border-top: 1px solid #ddd;
-  display: none;
-  align-items: center;
-  padding-left: 14px;
-  padding-right: 14px;
-  z-index: 999;
-}
-.nav-btn {
-  flex: 1;
-  background: none;
-  border: none;
-  font-size: 26px;
-  color: #666;
-  cursor: pointer;
-  text-align: center;
-}
-.nav-btn.active { color: #ff6b35; }
-.add-btn {
-  background: #ff6b35;
-  color: white;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  border: none;
-  font-size: 28px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: auto;
-  box-shadow: 0 4px 10px rgba(255,107,53,0.35);
-  cursor: pointer;
-}
-/* Show only after login */
-body.logged-in .bottom-nav { display: flex; }
-/* Prevent overlap */
-.container { padding-bottom: calc(120px + env(safe-area-inset-bottom)) !important; }
-
-
-/* Modal fix to avoid overlap with bottom nav */
-.modal {
-  margin-bottom: 80px !important;
-}
-.modal-content, .modal form, #transaction-form {
-  max-height: calc(100vh - 140px) !important;
-  overflow-y: auto !important;
-}
-
-</style>
+  </style>
 </head>
 <body>
   <!-- Sidebar overlay -->
@@ -651,12 +536,6 @@ body.logged-in .bottom-nav { display: flex; }
     // ---------- Auth Flow ----------
     // Show auth page until user signed in
     onAuthStateChanged(auth, async (user) => {
-  if(user){ document.body.classList.add('logged-in'); } 
-  else { document.body.classList.remove('logged-in'); }
-  if(user){ document.body.classList.add('logged-in'); } 
-  else { document.body.classList.remove('logged-in'); }
-  if(user){ document.body.classList.add('logged-in'); } 
-  else { document.body.classList.remove('logged-in'); }
       if (user) {
         uid = user.uid;
         updateAuthUI(true, user);
@@ -1279,21 +1158,6 @@ body.logged-in .bottom-nav { display: flex; }
 
     // ---------- Navigation ----------
     function switchPage(page) {
-  document.querySelectorAll('.nav-btn').forEach(btn => {
-    btn.classList.toggle('active', btn.dataset.page === page);
-  });
-  document.querySelectorAll('.nav-btn').forEach(btn => {
-    btn.classList.toggle('active', btn.dataset.page === page);
-  });
-  document.querySelectorAll('.bottom-nav button').forEach(btn => {
-      btn.classList.toggle('active', btn.dataset.page === page);
-  });
-  document.querySelectorAll('.bottom-nav button').forEach(btn => {
-      btn.classList.toggle('active', btn.dataset.page === page);
-  });
-  document.querySelectorAll('.bottom-nav-btn').forEach(btn => {
-      btn.classList.toggle('active', btn.dataset.page === page);
-  });
       document.querySelectorAll('.nav-item').forEach(item => item.classList.remove('active'));
       const navItems = document.querySelectorAll('.nav-item');
       const pages = ['home','history','analytics','recurring','budget','settings'];
@@ -1454,28 +1318,5 @@ async function resetData() {
 
 
   </script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- Final Bottom Navigation -->
-<nav class="bottom-nav">
-  <button onclick="switchPage('home')" data-page="home" class="nav-btn">🏠</button>
-  <button onclick="switchPage('analytics')" data-page="analytics" class="nav-btn">📊</button>
-  <button onclick="switchPage('history')" data-page="history" class="nav-btn">📋</button>
-  <button onclick="openAddTransaction()" class="add-btn">➕</button>
-</nav>
-
 </body>
 </html>
